--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,3 @@
 name = "elliesroom-class"
-pages_build_output_dir = "dist"
-
-[build]
-command = "npm run build"
-cwd = "class-web-app"
+compatibility_date = "2025-01-01"
+pages_build_output_dir = "class-web-app/dist"
