--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,3 @@
-name = "elliesroom-class"
-compatibility_date = "2025-01-01"
+name = "elliesbang-class"
+compatibility_date = "2025-10-20"
 pages_build_output_dir = "class-web-app/dist"
