--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   ],
   "scripts": {
     "build": "npm run build --workspace class-web-app"
+  },
+  "dependencies": {
+    "hono": "^4.5.11"
   }
 }
