Update functions directory path in wrangler.toml

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,7 +4,7 @@ compatibility_date = "2025-10-20"
 pages_build_output_dir = "class-web-app/dist"
 
 [[pages.functions]]
-directory = "class-web-app/functions"
+directory = "class-web-app/functions/api"
 
 [[d1_databases]]
 binding = "DB"
