--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,10 @@
 name = "elliesbang-class"
 compatibility_date = "2025-10-20"
 
-[pages]
-build_output_dir = "class-web-app/dist"
+pages_build_output_dir = "class-web-app/dist"
 
-[functions]
-directory = "class-web-app/functions"
+[pages]
+functions = "class-web-app/functions"
 
 [[d1_databases]]
 binding = "DB"
