--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "npm run build --workspace class-web-app"
   },
   "dependencies": {
-    "hono": "^4.5.11"
+    "hono": "^4.5.11",
+    "zod": "^3.23.8"
   }
 }
