--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,4 +8,4 @@ database_name = "elliesbang_class"
 database_id = "2a518bb3-9a4f-437e-a740-79a6ae96ead5"
 
 [[functions]]
-directory = "class-web-app/functions"
+directory = "class-web-app/functions_local"
