--- a/class-web-app/package.json
+++ b/class-web-app/package.json
@@ -14,12 +14,12 @@
     "react-router-dom": "^6.22.3",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.363.0",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "@vitejs/plugin-react": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.1"
