--- a/wrangler.toml
+++ b/wrangler.toml
@@ -14,4 +14,4 @@ vars = { NODE_ENV = "production" }
 [[env.production.d1_databases]]
 binding = "DB"
 database_name = "elliesbang_class"
-database_id = "2a518bb3-9a4f-437e-a740-79a6a96ead5"
+database_id =  "2a518bb3-9a4f-437e-a740-79a6ae96ead5"
