--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,17 +1,23 @@
 name = "elliesbang-class"
 compatibility_date = "2025-10-25"
-
 pages_build_output_dir = "class-web-app/dist"
 
+# ✅ Functions 설정 추가 (Cloudflare Pages용 API 인식)
+[functions]
+directory = "functions"
+routes = ["/api/*"]
+
+# ✅ D1 데이터베이스 연결
 [[d1_databases]]
 binding = "DB"
 database_name = "elliesbang_class"
 database_id = "2a518bb3-9a4f-437e-a740-79a6a96ead5"
 
+# ✅ 환경 설정
 [env.production]
 vars = { NODE_ENV = "production" }
 
 [[env.production.d1_databases]]
 binding = "DB"
 database_name = "elliesbang_class"
-database_id =  "2a518bb3-9a4f-437e-a740-79a6ae96ead5"
+database_id = "2a518bb3-9a4f-437e-a740-79a6a96ead5"
