wrangler.toml 업데이트

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -19,5 +19,5 @@ vars = { NODE_ENV = "production" }
 
 [[env.production.d1_databases]]
 binding = "DB"
-database_name = "elliesbang_class"2a518bb3-9a4f-437e-a740-79a6ae96ead5
+database_name = "elliesbang_class"
 "
