wrangler.toml 업데이트

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -21,3 +21,4 @@ vars = { NODE_ENV = "production" }
 binding = "DB"
 database_name = "elliesbang_class"
 database_id = "2a518bb3-9a4f-437e-a740-79a6ae96ead5"
+# updated on 2025-10-26
