--- a/wrangler.toml
+++ b/wrangler.toml
@@ -21,4 +21,6 @@ vars = { NODE_ENV = "production" }
 binding = "DB"
 database_name = "elliesbang_class"
 database_id = "2a518bb3-9a4f-437e-a740-79a6ae96ead5"
-# updated on 2025-10-26
+
+# ✅ 배포 확인용 주석 추가 (변경 감지를 위한 강제 커밋)
+# Cloudflare Pages config validated 2025-10-26
