Fix paths in wrangler.toml for build output
Updated paths for pages_build_output_dir and functions.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,8 +6,8 @@ command = "npm run build"
 cwd = "class-web-app"  # 빌드 명령이 실행될 경로
 
 [pages]
-pages_build_output_dir = "class-web-app/dist"  # ✅ ./ 제거
-functions = "functions"
+pages_build_output_dir = "./class-web-app/dist"  # ✅ ./ 제거
+functions = "./functions"
 
 [[d1_databases]]
 binding = "DB"
