--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,7 +6,7 @@ command = "npm run build"
 cwd = "class-web-app"
 
 [pages]
-pages_build_output_dir = "./class-web-app/dist"
+pages_build_output_dir = "class-web-app/dist"
 functions = "./functions"
 
 [[d1_databases]]
