wrangler.toml 업데이트

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,18 +6,22 @@ command = "npm run build"
 cwd = "class-web-app"
 
 [pages]
-pages_build_output_dir = "class-web-app/dist"
+# 경로 수정: cwd(class-web-app) 기준으로 'dist'에 결과물이 생성됨
+pages_build_output_dir = "dist" 
 functions = "./functions"
 
 [[d1_databases]]
 binding = "DB"
 database_name = "elliesbang_class"
+# ⚠️ 구문 오류 수정: database_id를 한 줄로 합침
 database_id = "2a518bb3-9a4f-437e-a740-79a6ae96ead5"
+
 
 [env.production]
 vars = { NODE_ENV = "production" }
 
-[env.production.d1_databases]
+[[env.production.d1_databases]]
 binding = "DB"
 database_name = "elliesbang_class"
+# ⚠️ 구문 오류 수정: database_id를 한 줄로 합침
 database_id = "2a518bb3-9a4f-437e-a740-79a6ae96ead5"
