--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,13 +1,11 @@
 name = "elliesbang_class"
 compatibility_date = "2025-10-25"
+pages_build_output_dir = "class-web-app/dist"
+pages_functions_dir = "./functions"
 
 [build]
 command = "npm run build"
 cwd = "class-web-app"
-
-[pages]
-pages_build_output_dir = "class-web-app/dist"
-functions = "./functions"
 
 [[d1_databases]]
 binding = "DB"
