--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,24 +1,23 @@
 name = "elliesbang_class"
 compatibility_date = "2025-10-25"
+
+[pages]
+# ✅ Vite가 빌드한 정적 파일 위치
 pages_build_output_dir = "class-web-app/dist"
-pages_functions_dir = "./functions"
 
-[build]
-command = "npm run build"
-cwd = "class-web-app"
+# ✅ API 함수들이 들어 있는 폴더
+functions = "./functions"
 
+# ✅ D1 Database 연결
 [[d1_databases]]
 binding = "DB"
 database_name = "elliesbang_class"
-# ⚠️ 구문 오류 수정: database_id를 한 줄로 합침
 database_id = "2a518bb3-9a4f-437e-a740-79a6ae96ead5"
-
 
 [env.production]
 vars = { NODE_ENV = "production" }
 
-[[env.production.d1_databases]]
+[env.production.d1_databases]
 binding = "DB"
 database_name = "elliesbang_class"
-# ⚠️ 구문 오류 수정: database_id를 한 줄로 합침
 database_id = "2a518bb3-9a4f-437e-a740-79a6ae96ead5"
