--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,8 +2,11 @@ name = "class-web-app"
 main = "functions"
 compatibility_date = "2024-10-20"
 
-[site]
-bucket = "./dist"
+# ✅ Cloudflare Pages 빌드 결과물 경로
+pages_build_output_dir = "./dist"
 
-[build]
-command = "npm run build"
+# ✅ D1 Database 연결
+[[d1_databases]]
+binding = "DB"
+database_name = "elliesbang_class"
+database_id = "2a518bb3-9a4f-437e-a740-79a6ae96ead5"
