--- a/wrangler.toml
+++ b/wrangler.toml
@@ -14,6 +14,6 @@ database_id = "2a518bb3-9a4f-437e-a740-79a6ae96ead5"
 NODE_VERSION = "20"
 D1_DATABASE_ID = "2a518bb3-9a4f-437e-a740-79a6ae96ead5"
 DATABASE_NAME = "elliesbang_class"
-DB = "elliesbang_class"
+DB_NAME = "elliesbang_class"
 VITE_API_BASE_URL = "/api"
 VITE_APP_ENV = "production"
