--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,12 @@
 name = "class-web-app"
-compatibility_date = "2024-10-20"
+compatibility_date = "2024-10-01"
 
-# ✅ Cloudflare Pages 빌드 결과물 경로
-pages_build_output_dir = "./app/dist"
+# Pages에서는 site 섹션 금지
+# 대신 build.output_directory 사용
 
-[site]
-bucket = "./app/dist"
-entry-point = "functions"
+[build]
+command = "npm run build"
+output_directory = "app/dist"
 
-# ✅ D1 Database 연결
-# [[d1_databases]]
-# binding = "DB"
-# database_name = "elliesbang_class"
-# database_id = "2a518bb3-9a4f-437e-a740-79a6ae96ead5"
-
-[vars]
-NODE_VERSION = "20"
-# D1_DATABASE_ID = "2a518bb3-9a4f-437e-a740-79a6ae96ead5"
-# DATABASE_NAME = "elliesbang_class"
-# DB_NAME = "elliesbang_class"
-VITE_API_BASE_URL = "/api"
-VITE_APP_ENV = "production"
+[functions]
+directory = "functions"
