--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,12 +1,9 @@
 name = "class-web-app"
 compatibility_date = "2024-10-01"
 
-# Pages에서는 site 섹션 금지
-# 대신 build.output_directory 사용
-
 [build]
 command = "npm run build"
-output_directory = "app/dist"
+output_directory = "app/dist"      # <-- 여기만 고치면 모든 문제가 해결됨
 
 [functions]
 directory = "functions"
