--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "npm run build --workspace app"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "hono": "^4.5.11",
     "zod": "^3.23.8"
   }
