--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
 name = "class-elliesbang"
 compatibility_date = "2024-11-01"
 
-pages_build_output_dir = "./dist"
+pages_build_output_dir = "./app/dist"
