--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "@supabase/supabase-js": "^2.45.4",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.363.0",
     "vite": "^5.4.0",
