Move Netlify functions into app directory

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,4 +2,6 @@
   base = "app"
   publish = "dist"
   command = "npm --workspace elliesroom-class run build"
-  functions = "netlify/functions"
+
+[functions]
+  directory = "app/netlify/functions"
