--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
-[build]
-  base = "app"
-  publish = "dist"
-  command = "npm --workspace elliesroom-class run build"
-
 [functions]
-  directory = "app/netlify/functions"
+  directory = "netlify/functions"
+
+[build]
+  command = "npm run build"
+  publish = "dist"
