--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "app"
   ],
   "scripts": {
-    "build": "npm run build --workspace app"
+    "build": "rm -rf dist && npm run build --workspace app && cp -a app/dist dist"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
     "bcryptjs": "^2.4.3",
     "hono": "^4.5.11",
-    "zod": "^3.23.8"
+    "zod": "3.23.8"
   }
 }
