--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [functions]
-  directory = "netlify/functions"
+directory = "functions"
 
 [build]
-  command = "npm run build"
-  publish = "dist"
+command = "npm run build"
+publish = "dist"
