--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "app"
   ],
   "scripts": {
-    "build": "rm -rf dist && npm run build --workspace app && cp -a app/dist dist"
+    "build": "rm -rf dist && npm run build --workspace app && cp -a app/dist dist && cp _headers dist/_headers"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.4",
